0030452: Visualization - SelectMgr_ViewerSelector::Deactivate() raises exception when called twice

Removed unused SelectMgr_SOS_Sleeping enumeration value.
SelectMgr_ViewerSelector::Deactivate() now checks activation status before updating tolerance map.